--- a/AboutPageAssets/styles/aboutPageStyle.css
+++ b/AboutPageAssets/styles/aboutPageStyle.css
@@ -222,7 +222,7 @@ body div img {
     clear: none;
     float: none;
     padding-left: 0px;
-    margin-left: -139%;
+    margin-left: 100px;
     margin-bottom: 47px;
 }
 
