--- a/AboutPageAssets/styles/aboutPageStyle.css
+++ b/AboutPageAssets/styles/aboutPageStyle.css
@@ -234,6 +234,7 @@ body div img {
 }
 .socialNetworkNavBar {
     padding-left: 0px;
+    margin-right: 0px;
 }
 
 /* Media query for Mobile devices*/
